Fixed loading icon not showing when loading the Wallets

--- a/src/Components/ErrorBox/Errorbox.css
+++ b/src/Components/ErrorBox/Errorbox.css
@@ -15,7 +15,7 @@
 
 .errorBox.active {
   margin-bottom: 20px;
-  padding: 2px 2px 10px 10px;
+  padding: 5px 0 10px 10px;
   top: 0px;
   transition: top 850ms;
 }
